--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <h2>Yay!</h2>
+    <h1>Coming soon...</h1>
   </body>
 </html>
